// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render pagination 1`] = `
<div
  className="cf-1bek1ug"
  id={undefined}
  style={undefined}
>
  <ul
    aria-describedby={null}
    className="cf-123w5k0"
    role="navigation"
  >
    <li
      className="cf-tn889k"
      role={null}
    >
      <span
        aria-label="Previous Page"
        className="cf-3opov"
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </span>
    </li>
    <li
      className="cf-1j1psy1"
      role={null}
    >
      <span
        aria-label="Page 1"
        className="cf-3opov"
      >
        1
      </span>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 2"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 3"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 4"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 5"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Next Page"
        className="cf-1ex7c60"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination loading 1`] = `
<div
  className="cf-1bek1ug"
  id={undefined}
  style={undefined}
>
  <ul
    aria-describedby={null}
    className="cf-123w5k0"
    role="navigation"
  >
    <li
      className="cf-tn889k"
      role={null}
    >
      <span
        aria-label="Previous Page"
        className="cf-3opov"
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </span>
    </li>
    <li
      className="cf-1j1psy1"
      role={null}
    >
      <span
        aria-label="Page 1"
        className="cf-3opov"
      >
        <i
          className="cf-icon cf-icon--loading"
          role={undefined}
        />
      </span>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 2"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 3"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 4"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 5"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Next Page"
        className="cf-1ex7c60"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination with an infoFormatter 1`] = `
<div
  className="cf-1bek1ug"
  id={undefined}
  style={undefined}
>
  <ul
    aria-describedby={null}
    className="cf-123w5k0"
    role="navigation"
  >
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Previous Page"
        className="cf-1ex7c60"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 1"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="cf-1j1psy1"
      role={null}
    >
      <span
        aria-label="Page 2"
        className="cf-3opov"
      >
        2
      </span>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 3"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 4"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 5"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Next Page"
        className="cf-1ex7c60"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render pagination with the last page active 1`] = `
<div
  className="cf-1bek1ug"
  id={undefined}
  style={undefined}
>
  <ul
    aria-describedby={null}
    className="cf-123w5k0"
    role="navigation"
  >
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Previous Page"
        className="cf-1ex7c60"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 1"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 2"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        2
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 3"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        3
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 4"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="cf-1j1psy1"
      role={null}
    >
      <span
        aria-label="Page 5"
        className="cf-3opov"
      >
        5
      </span>
    </li>
    <li
      className="cf-tn889k"
      role={null}
    >
      <span
        aria-label="Next Page"
        className="cf-3opov"
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </span>
    </li>
  </ul>
</div>
`;

exports[`should render with collapsed items 1`] = `
<div
  className="cf-1bek1ug"
  id={undefined}
  style={undefined}
>
  <ul
    aria-describedby={null}
    className="cf-123w5k0"
    role="navigation"
  >
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Previous Page"
        className="cf-1ex7c60"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-left"
          role={undefined}
        />
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 1"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role="presentation"
    >
      <span
        aria-label="Page 2"
        className="cf-1ex7c60"
      >
        <span>
          …
        </span>
      </span>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 4"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 5"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="cf-1j1psy1"
      role={null}
    >
      <span
        aria-label="Page 6"
        className="cf-3opov"
      >
        6
      </span>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 7"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        7
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 8"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        8
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role="presentation"
    >
      <span
        aria-label="Page 9"
        className="cf-1ex7c60"
      >
        <span>
          …
        </span>
      </span>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Page 20"
        className="cf-p16ik9"
        href="#"
        onClick={[Function]}
      >
        20
      </a>
    </li>
    <li
      className="cf-1hg1ctm"
      role={null}
    >
      <a
        aria-label="Next Page"
        className="cf-1ex7c60"
        href="#"
        onClick={[Function]}
      >
        <i
          className="cf-icon cf-icon--caret-right"
          role={undefined}
        />
      </a>
    </li>
  </ul>
</div>
`;
